# UrbanAgentBench

./: .env.example  .gitignore  README.md  pyproject.toml
data/domains/urban_map_web/: db.json  policy.md  policy_abalation.md  split_tasks.json  tasks.json
data/domains/urban_satellite/: db.json  few_shot_examples.json  policy.md  split_tasks.json  tasks.json
scripts/: run_urban_map_web.sh  run_urban_map_web_oracle.sh  run_urban_satellite.sh  run_urban_satellite_oracle.sh  run_visualization.sh
src/urban_agent_bench/: cli.py  config.py  registry.py  run.py
src/urban_agent_bench/agent/: base.py  llm_agent.py
src/urban_agent_bench/data_model/: message.py  simulation.py  tasks.py
src/urban_agent_bench/environment/: db.py  environment.py  server.py  toolkit.py
src/urban_agent_bench/evaluator/: evaluator.py  evaluator_action.py  evaluator_base.py  evaluator_communicate.py  evaluator_env.py  evaluator_nl_assertions.py
src/urban_agent_bench/metrics/: agent_metrics.py  break_down_metrics.py
src/urban_agent_bench/orchestrator/: environment_manager.py  orchestrator.py  utils.py
src/urban_agent_bench/user/: base.py  user_simulator.py
src/urban_agent_bench/utils/: display.py  llm_utils.py  tools.py  utils.py
task_generator/urban_map_web/: craw_pois.py  data_crawler.py  diverse_filtering.py  dynamic_validator.py  place_crawler.py  static_validator.py  task_generation.py  task_overall.csv  tools.json
task_generator/urban_satellite/: data_crawler.py  diverse_filtering.py  dynamic_validator.py  static_validator.py  task_generation.py  task_overall.csv  tools.json
(+22 files in other folders)
