[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "urban_agent_bench"
version = "1.0.0"
description = "UrbanAgentBench: Evaluating AI Agents on Urban Tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rich",
    "ruff>=0.9.1",
    "tabulate>=0.9.0",
    "pydantic>=2.0",
    "pydantic-argparse>=0.10.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "loguru>=0.7.3",
    "docstring-parser>=0.16",
    "litellm>=1.65.0",
    "tenacity>=9.0.0",
    "deepdiff>=8.4.2",
    "addict>=2.4.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.scripts]
uab = "urban_agent_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501", "F401", "F541"]

[tool.ruff]
line-length = 88
